@@ -1,3 +1,8 @@
+1999-04-12  Katsumi Yamaoka   <yamaoka@jpl.org>
+
+	* mime-pgp.el (mime-pgp-check-signature): Return nil if neither bad
+	nor good.
+
 1999-04-09  Katsumi Yamaoka   <yamaoka@jpl.org>
 
 	* mime-mc.el (mime-mc-pgp-encrypt-region, mime-mc-pgp-sign-region,
